c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/scalar_expressions/void_if_condition.c
int main(void) {
  int x = 10;

  // void expressions are non-scalar, so they can't be used as controlling conditions
  if ((void)x)
    return 0;
  return 1;
}